<resources>
    <string name="app_name">DropPoint</string>
    <string name="log_in">Login</string>
    <string name="plan_travel_repeat">Plan. Travel. Repeat.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="logo_of_plane_flying_around_drop_pin">Logo of plane flying around drop pin</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_upBtn">Sign up</string>
    <string name="login_here"><u>Login here!</u></string>
    <string name="dropPoint_logo">DropPoint Logo</string>
    <string name="tell_us_a_little_bit_about_yourself">Tell us a little bit about \n yourself.</string>
    <string name="logo_icon_image">Logo icon Image</string>
    <string name="logout">Log out</string>
    <string name="my_trips">My Trips</string>
    <string name="plus_sign_icon">Plus Sign icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">New Post</string>
    <string name="post">Post</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="tips_or_personal_experience">Tips or Personal Experience</string>
    <string name="location">Location</string>
    <string name="other">Other</string>
    <string name="upload_image_by_clicking_on_the_image_shown_of_camera">Upload image by clicking on the image shown of camera</string>
    <string name="title_activity_map_posts">MapPostsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_post_scrolling">PostScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="image_posted_by_user">Image posted by user</string>
    <string name="image_of_place">Image of place</string>
    <string name="search">Search for any place...</string>
    <string name="displaying_bookmark_icon">Displaying bookmark icon</string>
    <string name="plus_sign_icon_dialog">Plus sign icon</string>
    <string name="trip_name">Trip name</string>
    <string name="empty_folder">Empty Folder</string>
    <string name="select_trip_folder">Select trip folder</string>
    <string name="no_results_found_at_this_location">No results found at this location</string>
    <string name="loading">Loading...</string>
    <string name="map">Map</string>
    <string name="add_post">Add Post</string>
    <string name="profile">Profile</string>
    <string name="search_menu">Search</string>
</resources>